# aws_py_data_eng

./: .gitignore  README.md  batch_trigger_example.txt  pyproject.toml
aws_py_data_eng/: __init__.py  csv_to_parquet.py
deployment/: Dockerfile  aws_utils.tf  batch.tf  glue.tf  glue_wrapper.py  lambda.tf  notification.tf  requirements-batch.txt  s3.tf  step_function_definition.json  variables.tf
src/aws_py_data_eng/: batch_satellite_brightness.py  csv_to_parquet.py  lambda_wrapper.py  main.py
